make get all and create brand api
