# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\BrandController;
 use App\Http\Controllers\Api\V1\CategoryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -14,11 +15,10 @@ Route::prefix('v1')->group(function(){
     ], function() {
         Route::get('admin/categories', [CategoryController::class, 'index']);
         Route::post('admin/categories', [CategoryController::class, 'store']);
+        Route::put('admin/categories/{id}', [CategoryController::class, 'update']);
+        Route::delete('admin/categories/{id}', [CategoryController::class, 'destroy']);
+
+        Route::get('admin/brands', [BrandController::class, 'index']);
+        Route::post('admin/brands', [BrandController::class, 'store']);
     });    
 });
-
-
-
-// Route::get('/user', function (Request $request) {
-//     return $request->user();
-// })->middleware('auth:sanctum');
